src/objects/Publisher__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Publisher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publisher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publishers</pluralLabel>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <recordTypes>
        <fullName>test2t</fullName>
        <active>true</active>
        <description>sdfsd</description>
        <label>test2</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>